--- a/cmake/jsonataConfig.cmake.in
+++ b/cmake/jsonataConfig.cmake.in
@@ -7,7 +7,7 @@
 
 include(CMakeFindDependencyMacro)
 # json library used by jsonata
-find_dependency(nlohmann_json)
+find_dependency(nlohmann_json CONFIG)
 
 # Load the targets file
 include("${CMAKE_CURRENT_LIST_DIR}/jsonataTargets.cmake")
