--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,19 +60,24 @@ target_include_directories(jsonata PUBLIC
         $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
-# Link dependency handling for nlohmann_json
-# When using find_package, we can link publicly to the imported target
-# When using FetchContent, we need to handle it differently to avoid export issues
-if(nlohmann_json_FOUND)
-    # Found via find_package - can link publicly
-    target_link_libraries(jsonata PUBLIC nlohmann_json::nlohmann_json)
+# nlohmann_json is used from public headers, so propagate it PUBLIC.
+# Ensure the exported target only records the imported name in the install
+# interface to avoid referencing non-exported build targets.
+if(TARGET nlohmann_json::nlohmann_json)
+    target_link_libraries(jsonata PUBLIC
+        $<BUILD_INTERFACE:nlohmann_json::nlohmann_json>
+        $<INSTALL_INTERFACE:nlohmann_json::nlohmann_json>
+    )
+elseif(TARGET nlohmann_json)
+    target_link_libraries(jsonata PUBLIC
+        $<BUILD_INTERFACE:nlohmann_json>
+        $<INSTALL_INTERFACE:nlohmann_json::nlohmann_json>
+    )
 else()
-    # Fetched via FetchContent - link privately and let consumers find their own
-    if(TARGET nlohmann_json::nlohmann_json)
-        target_link_libraries(jsonata PRIVATE nlohmann_json::nlohmann_json)
-    elseif(TARGET nlohmann_json)
-        target_link_libraries(jsonata PRIVATE nlohmann_json)
-    endif()
+    # Not present in the build; rely on the installed config to find it.
+    target_link_libraries(jsonata PUBLIC
+        $<INSTALL_INTERFACE:nlohmann_json::nlohmann_json>
+    )
 endif()
 
 if(_JSONATA_NLOHMANN_BUILD_TARGET)
